--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">135000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">114750 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">157500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">133800 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone13_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone13_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone13_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone13_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
