--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">165000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">140250 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">187500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">159300 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone13pro_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone13pro_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone13pro_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone13pro_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -104,8 +104,8 @@
 
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">210000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">178500 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone13promax_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone13promax_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone13promax_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone13promax_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -122,8 +122,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">172500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">146700 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">195000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">165750 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone14_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone14_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone14_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone14_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -141,8 +141,8 @@
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">225000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">191250 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">247500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">210300 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone14pro_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone14pro_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone14pro_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone14pro_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -161,8 +161,8 @@
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">292500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">248700 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">1 TB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">315000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">267750 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone14promax_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone14promax_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone14promax_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone14promax_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -179,8 +179,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">210000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">178500 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">232500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">197700 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone15_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone15_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone15_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone15_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -197,8 +197,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">240000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">204000 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">262500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">223200 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone15pro_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone15pro_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone15pro_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone15pro_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -215,8 +215,8 @@
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">307500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">261300 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">330000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">280500 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone15promax_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone15promax_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone15promax_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone15promax_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -233,8 +233,8 @@
 <div class="variant">128 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">247500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">210300 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">270000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">229500 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone16_128" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone16_128" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone16_128" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone16_128" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -250,8 +250,8 @@
 
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">300000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">255000 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone16pro_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone16pro_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone16pro_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone16pro_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 <div class="card">
@@ -268,8 +268,8 @@
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">330000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">280500 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">360000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">306000 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone16promax_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone16promax_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone16promax_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone16promax_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 
@@ -287,8 +287,8 @@
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">297000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">252450 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">320250 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">272250 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone17_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone17_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone17_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone17_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 
@@ -306,8 +306,8 @@
 <div class="variant">256 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">372000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">316200 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">397500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">337800 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphoneair_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphoneair_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphoneair_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphoneair_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 
@@ -326,8 +326,8 @@
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">447000 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">379950 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">1 TB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">490500 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">417000 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone17pro_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone17pro_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone17pro_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone17pro_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 
@@ -346,8 +346,8 @@
 <div class="variant">512 GB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">485250 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">412500 ₸</span></div><hr style="border:none;border-top:1px solid #222;margin:10px 0;"/>
 <div class="variant">1 TB</div><div class="price"><span style="text-decoration:line-through;color:#888;font-size:14px;">542250 ₸</span><br><span style="color:#0f0; font-weight:700; font-size:18px;">460950 ₸</span></div>
 <div class="actions">
-  <a class="order" href="https://t.me/manager_am_by?start=iphone17promax_256" target="_blank">📩 Кеңес алу</a>
-  <a class="order buy" href="https://t.me/manager_am_by?start=iphone17promax_256" target="_blank">🛒 Қазір сатып алу</a>
+  <a class="order" href="https://wa.me/+77083860478?start=iphone17promax_256" target="_blank">📩 Кеңес алу</a>
+  <a class="order buy" href="https://wa.me/+77083860478?start=iphone17promax_256" target="_blank">🛒 Қазір сатып алу</a>
 </div>
 </div>
 
@@ -365,14 +365,14 @@
     </a>
 
     <!-- Instagram — бөлшек -->
-    <a href="https://www.instagram.com/apple__market_by?igsh=MnFwY3Z2емcycnlj" target="_blank"
+    <a href="https://www.instagram.com/appleland_official?igsh=MWs0a2g4bDV1ZWdqOQ==" target="_blank"
        style="background:#d62976; color:#fff; padding:10px 16px; border-radius:8px;
               text-decoration:none; font-weight:bold; display:flex; align-items:center;">
       📸 Instagram (бөлшек)
     </a>
 
     <!-- Instagram — көтерме -->
-    <a href="https://www.instagram.com/megaplace_market?igsh=ajN2cWNzNTd6NWE3" target="_blank"
+    <a href="https://www.instagram.com/appleland_official?igsh=MWs0a2g4bDV1ZWdqOQ==" target="_blank"
        style="background:#f56040; color:#fff; padding:10px 16px; border-radius:8px;
               text-decoration:none; font-weight:bold; display:flex; align-items:center;">
       🏷️ Instagram (көтерме)
@@ -388,7 +388,7 @@
   </div>
 
   <div style="margin-top:15px; font-size:12px; color:#666;">
-    © Apple Market 🍎 — Беларусь
+    © Apple Land 🍎 — Казахстан
   </div>
 </footer>
 
