--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     </a>
 
     <!-- Пікірлер -->
-    <a href="https://apple-market.github.io/reviews" target="_blank"
+    <a href="https://apple-land.github.io/reviews/" target="_blank"
        style="background:#2ecc71; color:#000; padding:10px 16px; border-radius:8px;
               text-decoration:none; font-weight:bold; display:flex; align-items:center;">
       ⭐ Пікірлер
