--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   <div style="display:flex; justify-content:center; gap:10px; flex-wrap:wrap;">
 
     <!-- Telegram -->
-    <a href="https://t.me/am_market_by" target="_blank"
+    <a href="https://t.me/" target="_blank"
        style="background:#0088cc; color:#fff; padding:10px 16px; border-radius:8px;
               text-decoration:none; font-weight:bold; display:flex; align-items:center;">
       ✈️ Telegram
